--- a/Discord.Interactions/Discord.Interactions.csproj
+++ b/Discord.Interactions/Discord.Interactions.csproj
@@ -15,5 +15,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Discord.Core\Discord.Core.csproj" />
+    <ProjectReference Include="..\Egast.API\Egast.API.csproj" />
   </ItemGroup>
 </Project>
