discord.core is now properly added as a git submodule

--- a/Discord.Interactions/Discord.Interactions.csproj
+++ b/Discord.Interactions/Discord.Interactions.csproj
@@ -14,7 +14,7 @@
     <PackageReference Include="Amazon.Lambda.AspNetCoreServer.Hosting" Version="1.4.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Discord.Core\Discord.Core.csproj" />
+    <ProjectReference Include="..\Discord.Core\Discord.Core.csproj" />
     <ProjectReference Include="..\Egast.API\Egast.API.csproj" />
   </ItemGroup>
 </Project>
